--- a/quicksight/app/docker-compose.yml
+++ b/quicksight/app/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: flask_app
     volumes:
       # below line for development purposes only. Enabling developer to see changes instantely without the need to rebuild
-      - .:/app
+      - .:/var/task
     build: .
     ports:
       - "8080:8080"
@@ -21,7 +21,7 @@ services:
     image: amazon/dynamodb-local:latest
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     volumes:
-      - "./docker/dynamodb:/home/dynamodblocal/data"
+      - "/docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
     ports:
       - "8000:8000"
@@ -31,4 +31,4 @@ networks:
     name: app_custom_network
 
 volumes:
-  app:
+  docker:
